# ibb-ifc

./: .gitignore  Makefile  README.md  build_gui.py  gui.py  main.py  make_helper.py  pyinstaller.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build_gui.yaml
ibb_ifc/: cli.py  gui.py  main.py
ibb_ifc/lib/: bbsoft.py  model_checker.py  quantity_takeoff.py
lib/: bbsoft.py  model_checker.py
