[tool.poetry]
authors = ["Hannes Wörn <hannes@woern.de>"]
description = ""
name = "ibb-ifc"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
ifcopenshell = "^0.7.0.231218"
lark = "^1.1.9"
numpy = "^1.26.3"
odswriter = "^0.4.0"
openpyxl = "^3.1.2"
pandas = "^2.2.0"
pyinstaller = "^6.3.0"
python = "3.11.*"
xlsxwriter = "^3.1.9"
click = "^8.1.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
